# Quicknote

./: Readme.md  index.html  package-lock.json  package.json
.github/workflows/: rust.yml
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  project.rs  titlebar.rs
src/functional/: Emitter.tsx
src/molecules/: EditorItem.tsx  Header.tsx  Navbar.tsx  PopupMenu.tsx  Project.tsx  TextArea.tsx
src/scenes/: Editor.tsx
