[package]
name = "dirsync"
version = "0.0.0"
description = "A Tauri App"
authors = ["Artur Hoffsümmer<artur.h.0427@gmail.com>"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["shell-open", "window-start-dragging"] }
serde = { version = "1.0", features = ["derive"] }
cocoa = "0.24.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
